--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "nodemon": "^2.0.1"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-candy-machine": "^6.0.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "^0.9.1",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
+    "@raydium-io/raydium-sdk": "^1.3.1-beta.50",
     "@solana/spl-token": "^0.4.3",
     "@solana/web3.js": "^1.91.2",
     "add": "^2.0.6",
